fixed contact alignment

--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,8 @@ h8{
     margin: 0 auto;
 
     display:inline-block;
+    vertical-align: bottom;
+
     /* position: relative;
     text-align: center; */
 
@@ -287,8 +289,11 @@ h8{
 .box{
   width: 300px;
   height: 200px;
+  /* border: #ccc 2px solid; */
   /* margin-top: 100px; */
     margin-top: 12%;
+
+
   /* display:inline-block; */
 
 }
@@ -313,7 +318,15 @@ h8{
 
 #pic{
 
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  padding: 10px 15px;
+  /* border-radius: 8px; */
+  line-height: 4em;
+  margin-left: 15px;
+
+
+
+
 
 }
 
